apparently I forgot about soil moisture

--- a/server/views/readings.jade
+++ b/server/views/readings.jade
@@ -7,6 +7,7 @@ block content
                 th TimeStamp
                 th Air Temperature
                 th Soil Temperature
+                th Soil Moisture
                 th Humidity
                 th Light
         tbody
@@ -15,5 +16,6 @@ block content
                     td #{reading.TimeStamp}
                     td #{reading["Air Temperature"]}
                     td #{reading["Soil Temperature"]}
+                    td #{reading["Soil Moisture"]}
                     td #{reading.Humidity}
                     td #{reading.Light}
