angular, smoothing, webhook, graphs, renamed sensor code, tuned soil temp sensor

--- a/server/public/stylesheets/style.css
+++ b/server/public/stylesheets/style.css
@@ -1,27 +1,13 @@
-body
-{
-	background: #111;
-	font-family: Courier;
-	font-size: 13px;
-	color: #3c3;
+body {
+  padding-top: 50px;
 }
-#title
-{
-	margin-top: 100px;
-	text-align: center;
+
+.internalcontainer {
+  padding: 40px 15px;
+  text-align: center;
 }
-#container
-{
-	width: 740px;
-	display: block;
-}
-#readings
-{
-	margin-top: 10px;
-	text-align: center;
-	font-size: 17px;
-}
-#interval
-{
-	text-align: center;
+
+pre {
+	background: white;
+	border: none;
 }
