--- a/server/views/readings.jade
+++ b/server/views/readings.jade
@@ -1,21 +1,12 @@
 extend layout
+
 block content
-    pre#title  #{title}
-    table
-        tbhead
-            tr
-                th TimeStamp
-                th Air Temperature
-                th Soil Temperature
-                th Soil Moisture
-                th Humidity
-                th Light
-        tbody
-            for reading in readings
-                tr
-                    td #{reading.TimeStamp}
-                    td #{reading["Air Temperature"]}
-                    td #{reading["Soil Temperature"]}
-                    td #{reading["Soil Moisture"]}
-                    td #{reading.Humidity}
-                    td #{reading.Light}
+    div(ng-controller="readingsController")
+        input(type="datetime-local" ng-model="startDate")
+        input(type="datetime-local" ng-model="endDate")
+
+        button(ng-click="refresh()") refresh
+            span(class="glyphicon glyphicon-leaf", aria-hidden="true")
+
+        linechart(data="readings" options="airhumoptions" mode="" width="780" height="300")
+        linechart(data="readings" options="moistlightoptions" mode="" width="780" height="300")
